infrastructure/backstage/backstage-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backstage-ingress
  namespace: backstage
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: backstage.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backstage # Το όνομα του service που δημιουργεί το Helm chart
            port:
              number: 80
